# are-in-folder

./: .gitignore  README.md  pyproject.toml
src/: main.py
